--- a/deploy-rkestg.yaml
+++ b/deploy-rkestg.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: emp
-          image: harbor.vghtpe.gov.tw/rkestg/emp:${TAG}
+          image: harbor.vghtpe.gov.tw/rkestg/emp:latest
           ports:
             - name: http
               containerPort: 8080
