--- a/deploy-rkestg.yaml
+++ b/deploy-rkestg.yaml
@@ -42,7 +42,7 @@ spec:
       volumes:
         - name: vol
           nfs:
-            path: /home/nfsshare
+            path: /home/nfs-test/VGHXXX
             server: 10.100.130.203
   volumeClaimTemplates: []
 ---
