--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #spring.datasource.username=bryce
 #spring.datasource.password=123456
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.jndi-name=java:jdbc/mysql
+spring.datasource.jndi-name=jdbc/mysql
 spring.mvc.view.suffix=.jsp
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
