--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.root=INFO
-logging.file.name=/APData/VGHXXX/emp
+logging.file.name=/APData/${hostname}
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
