--- a/deploy-rkestg.yaml
+++ b/deploy-rkestg.yaml
@@ -4,17 +4,17 @@ metadata:
   name: emp-rkestg
   namespace: rkestg
   labels:
-    workload.user.cattle.io/workloadselector: apps.statefulset-rkestg-emp
+    workload.user.cattle.io/workloadselector: apps.statefulset-rkestg-emp-rkestg
 spec:
   serviceName: emp
   replicas: 3
   selector:
     matchLabels:
-      workload.user.cattle.io/workloadselector: apps.statefulset-rkestg-emp
+      workload.user.cattle.io/workloadselector: apps.statefulset-rkestg-emp-rkestg
   template:
     metadata:
       labels:
-        workload.user.cattle.io/workloadselector: apps.statefulset-rkestg-emp
+        workload.user.cattle.io/workloadselector: apps.statefulset-rkestg-emp-rkestg
     spec:
       containers:
         - name: emp
@@ -60,7 +60,7 @@ spec:
       port: 8443
       targetPort: 8443      
   selector:
-    workload.user.cattle.io/workloadselector: apps.statefulset-rkestg-emp
+    workload.user.cattle.io/workloadselector: apps.statefulset-rkestg-emp-rkestg
   type: ClusterIP
 ---
 apiVersion: networking.k8s.io/v1
