--- a/deploy-rkestg.yaml
+++ b/deploy-rkestg.yaml
@@ -31,7 +31,7 @@ spec:
           imagePullPolicy: Always
           volumeMounts:
             - name: vol-emp
-              mountPath: /APData
+              mountPath: /APData/VGHXXX
           securityContext:
             allowPrivilegeEscalation: false
             privileged: false
@@ -40,7 +40,7 @@ spec:
       volumes:
         - name: vol-emp
           nfs:
-            path: /home/nfs-test/VGHXXX
+            path: /home/nfs-test
             server: 10.100.130.203
   volumeClaimTemplates: []
 ---
