--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#spring.datasource.url=jdbc:mysql://10.100.130.201:3306/users_database?characterEncoding=utf-8
-#spring.datasource.username=bryce
-#spring.datasource.password=123456
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://10.100.130.201:3306/users_database?characterEncoding=utf-8
+spring.datasource.username=bryce
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.jndi-name=jdbc/mysql
 spring.mvc.view.suffix=.jsp
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
