--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://10.100.130.201:3306/users_database?characterE
 spring.datasource.username=bryce
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.jndi-name=jdbc/mysql
+#spring.datasource.jndi-name=java:comp/env/jdbc/mysql
 spring.mvc.view.suffix=.jsp
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
@@ -10,3 +10,6 @@ spring.jpa.show-sql=true
 logging.level.root=INFO
 logging.file.name=/APData
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+spring.thymeleaf.enabled=false
+spring.mvc.view.prefix=/WEB-INF/views/
+server.servlet.context-path=/emp
