--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,41 @@
-spring.datasource.url=jdbc:mysql://10.100.130.201:3306/users_database?characterEncoding=utf-8
-spring.datasource.username=bryce
-spring.datasource.password=123456
+# 資料庫相關配置
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${emp_DB_USR:bryce}
+spring.datasource.password=${emp_DB_USR:123456}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.jndi-name=java:comp/env/jdbc/mysql
+spring.datasource.hikari.maximum-pool-size=${DB_TOTAL}
+spring.datasource.hikari.minimum-idle=${DB_IDLE}
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+
+# MVC 和 JSP 配置
 spring.mvc.view.suffix=.jsp
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.thymeleaf.enabled=false
+
+# JPA 和 Hibernate 配置
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# 日誌設定
 logging.level.root=INFO
 logging.file.name=/APData
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
-spring.thymeleaf.enabled=false
-spring.mvc.view.prefix=/WEB-INF/views/
+
+# 伺服器和 HTTPS 配置
+server.port=8443
 server.servlet.context-path=/emp
+
+# SSL（HTTPS）配置
+server.ssl.enabled=true
+server.ssl.key-store=classpath:server.jks
+server.ssl.key-store-password=vghtpe
+server.ssl.key-store-type=JKS
+
+management.endpoints.web.base-path=/
+management.endpoints.web.exposure.include=health
+management.endpoint.health.path=/health
+
+
