--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<!-- 一定要注意mvn的插件一定是1.4.2.RELEASE,否则jsp访问不到 -->
 			<plugin>
