--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # 資料庫相關配置
 spring.datasource.url=${DB_URL}
-spring.datasource.username=${emp_DB_USR}
-spring.datasource.password=${emp_DB_PWD}
+spring.datasource.username=${emp_DB_USR:bryce}
+spring.datasource.password=${emp_DB_PWD:123456}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.jndi-name=java:comp/env/jdbc/mysql
 spring.datasource.hikari.maximum-pool-size=${DB_TOTAL}
